--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.apiexamblog">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="여행일기"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".APIMain"></activity>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".APIMain" />
         <activity android:name=".APIExamSearchBlog" />
         <activity android:name=".MultipartUtil" />
         <activity android:name=".APIExamBlogPostMultipart" />
         <activity android:name=".APIExamBlogPost" />
         <activity android:name=".APIExamBlogCategory" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
